1/23 | Fixed spacing, no more overlapping thanks to padding-top

--- a/css_folder/displaydom.css
+++ b/css_folder/displaydom.css
@@ -4,11 +4,12 @@
 
 #ulHeader {
     list-style-type: none;
-    height: 5vh;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,.7);
+
 }
 .liNav{
     float:left;
@@ -28,11 +29,22 @@
 
 #bodyElement {
     height: 95vh;
+    /* width: 98.6%; */
     margin: 0;
+    margin-top: 1%;
+    margin-bottom: 2%;
     padding: 0;
+    padding-top: 2%;
     background-color: lightblue;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,.7);
 }
-
+#bodyRenderStage{
+    height: 80vh;
+    width: 98%;
+    margin: 0 auto;
+    z-index: 1;
+    background-color: lightcyan;
+}
 /************* 
     FOOTER 
 **************/
@@ -42,4 +54,5 @@
     margin: 0;
     padding: 0;
     background-color: bisque;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,.7);
 }
